--- a/views/login.html
+++ b/views/login.html
@@ -1,17 +1,15 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Connexion</title>
-    <link rel="stylesheet" href="/css/login.css">
-  </head>
-  <body>
-    <form method="POST" action="/login">
-      <h2 style="text-align:center;">Connexion</h2>
-      <input type="email" name="email" placeholder="Email" required>
-      <button type="submit">Se connecter</button>
-    </form>
-  </body>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+<meta charset="UTF-8">
+<title>Connexion</title>
+<link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+<form method="POST" action="/login">
+  <h2 style="text-align:center;">Connexion</h2>
+  <input type="email" name="email" placeholder="Email" required>
+  <button type="submit">Se connecter</button>
+</form>
+</body>
 </html>
-
-
