Edit login to signin

--- a/views/signin.html
+++ b/views/signin.html
@@ -9,7 +9,7 @@
   <header>Twitter Clone - Connexion</header>
 
   <div class="container">
-    <form method="POST" action="/login" class="auth-form">
+    <form method="POST" action="/signin" class="auth-form">
       <h2>Connexion</h2>
       <input type="email" name="email" placeholder="Email" required>
       <input type="password" name="password" placeholder="Mot de passe" required>
