--- a/views/signup.html
+++ b/views/signup.html
@@ -19,7 +19,7 @@
       <input type="file" name="avatar" accept="image/*">
       <button type="submit">Créer mon compte</button>
     </form>
-    <p>Déjà un compte ? <a href="/login">Se connecter</a></p>
+    <p>Déjà un compte ? <a href="/signin">Se connecter</a></p>
   </div>
 </body>
 </html>
